--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^2.2.1
   get_it: ^7.6.4
   http: ^1.1.0
+  flutter_svg: ^2.0.7
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -67,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/model/services/localization/
+    - images/svgs/
     - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
