--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   shared_preferences: ^2.2.1
   get_it: ^7.6.4
   http: ^1.1.0
+  table_calendar: ^3.0.9
+  intl: ^0.18.0
   flutter_svg: ^2.0.7
   flutter:
     sdk: flutter
