--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  provider: ^6.0.5
+  flutter_bloc: ^8.1.6
   shared_preferences: ^2.2.1
   get_it: ^7.6.4
   http: ^1.1.0
-  table_calendar: ^3.0.9
-  intl: ^0.18.0
-  flutter_svg: ^2.0.7
+  equatable: ^2.0.0
   flutter:
     sdk: flutter
   flutter_localizations:
