--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   get_it: ^7.6.4
   http: ^1.1.0
   equatable: ^2.0.0
+  cached_network_image: ^3.4.1
+
   flutter:
     sdk: flutter
   flutter_localizations:
